name:                krivine-machine
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bassov/krivine-machine#readme
license:             BSD3
license-file:        LICENSE
author:              Basov Alexandr
maintainer:          bainst4@gmail.com
copyright:           Basov Alexandr
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     KrivineMachine
                     , LambdaCompiler
                     , LambdaParser
                     , Parser
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable krivine-machine-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , krivine-machine
                     , distributed-process
                     , network-transport-tcp
  default-language:    Haskell2010

test-suite krivine-machine-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , krivine-machine
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bassov/krivine-machine
